backend-configs/02-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: coursework
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8008        
      targetPort: 8008
