backend-configs/03-backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: coursework
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "backend.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8008
